--- a/style.css
+++ b/style.css
@@ -27,3 +27,17 @@ button {
   font-size: 16px;
   cursor: pointer;
 }
+
+.graph {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.bar {
+  width: 30px;
+  height: 0;
+  background: #f59e0b;
+  border-radius: 5px;
+  transition: height 0.5s;
+}
